# skill-lint

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: audit-evil-deploy.html  audit-malicious-skill.html  evil-deploy.md  index.html  remote-audit-gstack.html  remote-audit-mcp.html  remote-audit-skills.html  remote-audits.md
src/skill_audit/: __init__.py  analyzer.py  cli.py  fetcher.py  formatters.py  ignore.py  llm_reviewer.py  models.py  parser.py
src/skill_audit/rubrics/: __init__.py  role_rubrics.py  skill_rubrics.py
tests/: test_analyzer.py  test_fetcher.py  test_ignore.py  test_llm_reviewer.py  test_parser.py  test_rubrics.py
