[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-skill-audit"
version = "0.4.0"
description = "Audit AI skill and role files for quality and trust. Catches bad prompts before they reach your agent."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Dawa" }]
keywords = ["ai", "skills", "audit", "claude", "prompt-engineering", "quality", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "mistletoe>=1.5.1",
]

[project.urls]
Homepage = "https://github.com/dawalama/skill-audit"
Repository = "https://github.com/dawalama/skill-audit"
Issues = "https://github.com/dawalama/skill-audit/issues"
Changelog = "https://github.com/dawalama/skill-audit/releases"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ai-skill-audit = "skill_audit.cli:app"
skill-audit = "skill_audit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
